# freebsd-csi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY_REVIEW.md  release-please-config.json
.github/workflows/: ci.yml  prepare-release.yml  release-please.yml  release.yml  tag-release.yml
.serena/: project.yml
charts/freebsd-csi/: Chart.yaml  README.md  values.yaml
charts/freebsd-csi/templates/: NOTES.txt  _helpers.tpl  chap-secret.yaml  controller-deployment.yaml  controller-metrics-service.yaml  csidriver.yaml  namespace.yaml  node-daemonset.yaml  rbac.yaml  serviceaccount.yaml  servicemonitor.yaml  storageclass.yaml  tls-secret.yaml
csi-driver/: Cargo.toml  build.rs
csi-driver/src/: agent_client.rs  controller.rs  identity.rs  lib.rs  main.rs  metrics.rs  node.rs  types.rs
csi-driver/src/platform/: freebsd.rs  linux.rs  mod.rs
csi-driver/tests/: integration_test.rs
ctld-agent/: Cargo.toml  build.rs
ctld-agent/scripts/: ctl-config-helper.py
ctld-agent/src/: auth.rs  lib.rs  main.rs  metrics.rs
ctld-agent/src/ctl/: config.rs  config_manager.rs  config_validator.rs  csi_config.rs  ctl_manager.rs  error.rs  iscsi.rs  mod.rs  nvmeof.rs  types.rs  ucl_config.rs
ctld-agent/src/service/: mod.rs  storage.rs
ctld-agent/src/zfs/: dataset.rs  error.rs  mod.rs  properties.rs
ctld-agent/tests/: integration_test.rs
deploy/kubernetes/: csi-driver.yaml  rbac.yaml  storageclass.yaml
docker/: Dockerfile
docs/: architecture.md  chap-setup.md  configuration.md  installation.md  metrics.md  runbook.md
docs/plans/: 2025-01-26-snapshot-clone-dependency-handling.md  2025-01-27-robustness-improvements.md  2025-01-28-robustness-implementation.md  2026-01-19-freebsd-csi-implementation.md  2026-01-20-ucl-config-refactor.md
e2e-tests/: .gitignore  conftest.py  pytest.ini  requirements.txt  run_tests.sh
e2e-tests/lib/: __init__.py  agent_client.py  k8s_client.py  log_collector.py  resource_tracker.py  storage_monitor.py
e2e-tests/lib/proto/: ctld_agent_pb2.py  ctld_agent_pb2_grpc.py
e2e-tests/reports/: ctl-after.txt  ctl-before.txt  results.xml  zfs-after.txt  zfs-before.txt
e2e-tests/resources/snapshotclasses/: freebsd-csi.yaml
e2e-tests/resources/storageclasses/: iscsi-chap-basic.yaml  iscsi-chap-mutual.yaml  iscsi-chap.yaml  iscsi-copy.yaml  iscsi-linked.yaml  iscsi-retain.yaml  nvmeof-linked.yaml
e2e-tests/stress/: __init__.py  test_clone_chains.py  test_concurrent_ops.py  test_rapid_lifecycle.py
e2e-tests/tests/: __init__.py  test_01_identity.py  test_02_volume_lifecycle.py  test_03_snapshot.py  test_04_clone_linked.py  test_05_clone_copy.py  test_06_pvc_clone.py  test_07_chap_authentication.py  test_08_reclaim_policy.py
pkg/freebsd/: +MANIFEST  config.ucl.sample  ctld-agent.rc
proto/: ctld_agent.proto
scripts/: reconcile.py
