[workspace]
resolver = "3"
members = [
    "ctld-agent",
    "csi-driver",
]

[workspace.package]
version = "0.1.10"
edition = "2024"
license = "BSD-2-Clause"
repository = "https://github.com/ndenev/freebsd-csi"

[workspace.dependencies]
tokio = { version = "1.49", features = ["full"] }
tonic = { version = "0.14", features = ["tls-ring"] }
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
prost-types = "0.14"
uuid = { version = "1.11", features = ["v4"] }
hostname = "0.4"
