[workspace]
resolver = "3"
members = [
    "ctld-agent",
    "csi-driver",
]

[workspace.package]
version = "0.1.23"
edition = "2024"
license = "BSD-2-Clause"
repository = "https://github.com/ndenev/freebsd-csi"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tonic = { version = "0.14.2", features = ["tls-ring"] }
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
prost-types = "0.14.3"
uuid = { version = "1.19.0", features = ["v4"] }
hostname = "0.4.2"
