[package]
name = "csi-driver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
tonic-prost = "0.14"
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid.workspace = true
hostname.workspace = true

[build-dependencies]
tonic-prost-build = "0.14"
