[package]
name = "ctld-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
tonic-prost = "0.14"
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uclicious = "0.1"
tempfile = "3.15"
sha2 = "0.10"
hex = "0.4"

[build-dependencies]
tonic-prost-build = "0.14"
